docs(fix): fix some wcag-aa color contrast issues

--- a/docs/.vitepress/theme/styles.css
+++ b/docs/.vitepress/theme/styles.css
@@ -5,11 +5,21 @@
 /* Vitest */
 :root[data-variant="vitest"] {
   --color-brand: #008039;
+  /* TODO: home page wcag-aa color contrast (remove this once fixed at void0 theme):
+   * - why vitest section and texts
+   * - vitest, resources, versions and social
+   * - footer
+   */
+  --color-grey: #867e8e;
+  /* TODO: code block (remove this once fixed at void0 theme) */
+  --vp-code-color: #007d38;
 }
 
 :root.dark:not([data-theme])[data-variant="vitest"],
 :root[data-theme="dark"][data-variant="vitest"] {
   --color-brand: var(--color-zest);
+  /* TODO: code block is fine on dark mode (remove this once fixed at void0 theme) */
+  --vp-code-color: var(--vp-c-brand-1);
 }
 
 :root[data-theme="light"][data-variant="vitest"] {
